--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
-  </tr>
+ <h2 hidden>Game over! Want to play again?! Just click refresh. 🧑‍🚀!</h2>
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
